2013-03-21  Robert Zenz <Bobby@bonsaimind.org>
	* themes/mxflat/theme.jl: Fixed $height-content and
	$width-content not being replaced in title.

2013-01-12  Christopher Roy Bratusek <nano@tuxfamily.org>
	* debian/changelog: update

	* debian/control: add dh-autoreconf as dependency

2012-12-01  Christopher Roy Bratusek <nano@tuxfamily.org>
	* lisp/sawfish/wm/tile/utils.jl: don't tile non-default windows

2012-11-27  Christopher Roy Bratusek <nano@tuxfamily.org>
	* lisp/sawfish/wm/tile/utils.jl: make tall-tiler support inexact
	values for master-window-width by making push-window failsafe

2012-11-26  Christopher Roy Bratusek <nano@tuxfamily.org>
	* src/windows.c: cap max-width / max-height of a window, if it exceeds
	32767 (X11 maximum) -- fixes odd window-behaviour with Firefox 17
	(original patch by Michael Panteleit)

	* lisp/sawfish/wm/tile/tile.jl
	* lisp/sawfish/wm/tile/col.jl
	* lisp/sawfish/wm/tile/tiler.jl
	* lisp/sawfish/wm/tile/utils.jl
	* lisp/sawfish/wm/tile/tall.jl: moved tiling from next-lisp/ into
	main-tree. Some minor fixups. Don't tile windows that are marked,
	ignored, dock, never-expose or are invisible. Original code: Jose A.
	Ortega Ruiz, modifications: Christopher Roy Bratusek

2012-11-03  Christopher Roy Bratusek <nano@tuxfamily.org>
	* lisp/sawfish/wm/util/keymap.jl: Revert "read-event now grabs pointer
	instead of keyboard." -- fixes grabbing keys doesn't always work

	* configure.in
	* src/fonts.c: no longer depend on pangoX -- not shipped in recent
	versions anymore (reported in Fedora, Arch). Either use PangoXFT or
	plain XFT (patch from Fedora)

2012-09-29  Christopher Roy Bratusek <nano@tuxfamily.org>
	* lisp/sawfish/gtk/widget.jl: modified xdg widget to check for
	~/.sawfish/rc, too, if ~/.sawfishrc was requested (or vice versa)

	* lisp/sawfish/wm/custom.jl: removed some useless doc strings

2012-09-28  Christopher Roy Bratusek <nano@tuxfamily.org>
	* lisp/sawfish/wm/custom.jl: add some useful widgets to the main group