@@ -52,8 +52,6 @@
        (edge-flip-invoke edge func while-moving))
       ((flip-viewport)
        (edge-flip-invoke edge func while-moving))
-      ((expose-windows)
-       (expose-windows-action edge while-moving))
       ((expand-window)
        (expand-action edge))
       ((maximize-window)
