@@ -1,3 +1,6 @@
+2013-03-30  Christopher Roy Bratusek <nano@tuxfamily.org>
+	* lisp/sawfish/wm/ext/expose.jl: remove. We now have sawfish.wm.tile.*
+
 2013-03-21  Robert Zenz <Bobby@bonsaimind.org>
 	* themes/mxflat/theme.jl: Fixed $height-content and
 	$width-content not being replaced in title.
